--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "blcokchain with nodejs",
   "main": "index.js",
   "scripts": {
+    "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node ./src/index.js"
   },
